@@ -57,7 +57,7 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>32.11.3</version>
+			<version>32.12.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
