@@ -1,3 +1,5 @@
+- Refactor: RegistrationConclusionBean constructor cleanup
+
 6.26.0 (12-05-2022)
 - Refactor: Move SAS/SICABE integration code to legal pt 
 - Refactor: Update academic-core dependency
